name:                gvcalc
version:             0.1.0.0
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable gvcalc
  main-is:             Main.hs
  other-modules:       Syntax,
                       Types,
                       Interpreter
  build-depends:       base >=4.9 && <4.10,
                       containers >=0.5 && <0.6,
                       mtl >= 2.2
  default-language:    Haskell2010
