name:                gvcalc
version:             0.1.0.0
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable gvcalc
  main-is:             Main.hs
  other-modules:       Util,
                       Syntax,
                       Types,
                       Interpreter,
                       Lexer,
                       Parser
  build-tools:         alex >=3.1.7,
                       happy >=1.19
  hs-source-dirs:      src/
  build-depends:       base >=4.9 && <4.10,
                       containers >=0.5 && <0.6,
                       array >= 0.5.1,
                       mtl >= 2.2
  default-language:    Haskell2010
  ghc-options:         -fwarn-incomplete-patterns
